# aj-snapshot

./: AUTHORS  ChangeLog  INSTALL_GIT  README  aj-alsa.c  aj-alsa.h  aj-file.h  aj-jack.c  aj-jack.h  aj-remove.c  aj-remove.h  aj-snapshot-1.0.tar.bz2  aj-snapshot.1  aj-snapshot.c  aj-snapshot.h  compile.sh  configure  configure.ac
man/: Makefile.am  aj-snapshot.1
src/: Makefile.am  aj-alsa.c  aj-alsa.h  aj-file.c  aj-file.h  aj-jack.c  aj-jack.h  aj-remove.c  aj-remove.h  aj-snapshot.c  aj-snapshot.h
